<resources>
    <string name="app_name">projetws</string>
    <string name="nom">Nom :</string>
    <string name="prenom">Prenom :</string>
    <string name="ville">Ville</string>
    <string name="sexe">Sexe :</string>
    <string name="homme">homme</string>
    <string name="add">Add</string>
    <string name="show_etudiants">Show Etudiants</string>
    <string name="femme">femme</string>
</resources>