<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_height="match_parent"
    tools:context=".AddEtudiant">
    <TextView
        android:id="@+id/textView"
        style="@style/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nom" />
    <EditText
        android:id="@+id/nom"
        style="@style/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />
    <TextView
        android:id="@+id/textView2"
        style="@style/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prenom" />
    <EditText
        android:id="@+id/prenom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        style="@style/input"
        android:inputType="textPersonName" />
    <TextView
        android:id="@+id/textView3"
        style="@style/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ville" />
    <Spinner
        android:id="@+id/ville"
        android:entries="@array/villes"
        style="@style/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/textView4"
        style="@style/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sexe"/>
    <RadioGroup
        android:layout_width="match_parent"
        style="@style/text"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/homme" />
        <RadioButton
            android:id="@+id/f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/femme" />
    </RadioGroup>
    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />
    <Button
        android:id="@+id/goToListButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_etudiants"
        android:background="@color/black"
        />
</LinearLayout>